* Make BaseImage.subject_location field non-nullable
* Adds icon sizes
* Fixes owner search icon on detail view
* Disable submit button if only one folder to copy file
* Design improvements
* Empty folder design
* Removes disabled action button border
* Adds unsorted uploads empty view
* Fix issues with subject location being off on images smaller than 210px


1.1.1 (2016-01-27)
------------------

* Fixes tests and configuration to run under Django 1.9
* Allow Django 1.9.x in setup requirements
* Fixes an issue where only the first drop-zone will be active
* Fixes an issue with Python 3 for the import_files command
* Fixes button space on delete confirmation modal
* Updates Filer image plugin form fields
* Removes folder content space in admin, side frame and modal
* Updates drag and drop modal window
* Updates drag and drop widget styles
* Fixes empty folder alignment


1.1.0 (2016-01-19)
------------------

* Allow to provide single dimension for resizing images.
* Search result fixes for current folder search.
* Workaround for SQLite problems on simultaneous file uploads.
* Add missing search results counters.
* Move project to divio/django-filer.
* Adapt documentation links.
* Cleanup frontend code and adapt to guidelines.
* Added drag & drop capabilities.
* Redesign of the User Interface


1.0.6 (2015-12-30)
------------------

* Fix imports for django-polymorphic>=0.8.
* Limit dependencies versions in setup.py.
* Simplify tox setup.
* Refactor Travis setup to use tox environments list.


1.0.5 (2015-12-29)
------------------

* Pin django-polymorphic version.
* Use specific django-mptt versions in tox.ini for different Django versions.


1.0.4 (2015-11-14)
------------------

* Repackage for PyPI.


1.0.3 (2015-11-24)
------------------

* Fixes a bad static path.
* Adds a fix for Django 1.8 envs.


1.0.2 (2015-11-10)
------------------

* Repackage for PyPI.


1.0.1 (2015-11-03)
------------------

* Repackage for PyPI.


1.0.0 (2015-11-03)